--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,13 +33,19 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Du_An_1_SD19310
 excludes=
+file.reference.filters-2.0.235.jar=E:\\raven-project-main\\raven-project-main\\filters-2.0.235.jar
 file.reference.miglayout-4.0.jar=miglayout-4.0.jar
+file.reference.swing-worker-1.1.jar=E:\\raven-project-main\\raven-project-main\\swing-worker-1.1.jar
+file.reference.swingx-1.6.1.jar=E:\\raven-project-main\\raven-project-main\\swingx-1.6.1.jar
 file.reference.TimingFramework-0.55.jar=TimingFramework-0.55.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.TimingFramework-0.55.jar}:\
-    ${file.reference.miglayout-4.0.jar}
+    ${file.reference.miglayout-4.0.jar}:\
+    ${file.reference.swing-worker-1.1.jar}:\
+    ${file.reference.filters-2.0.235.jar}:\
+    ${file.reference.swingx-1.6.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
