--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,13 +33,26 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Du_An_1_SD19310
 excludes=
+file.reference.commons-codec-1.10.jar=E:\\Lib_DA1\\lib\\lib\\commons-codec-1.10.jar
+file.reference.commons-collections4-4.1.jar=E:\\Lib_DA1\\lib\\lib\\commons-collections4-4.1.jar
+file.reference.commons-logging-1.2.jar=E:\\Lib_DA1\\lib\\lib\\commons-logging-1.2.jar
+file.reference.curvesapi-1.04.jar=E:\\Lib_DA1\\lib\\lib\\curvesapi-1.04.jar
 file.reference.filters-2.0.235.jar=E:\\raven-project-main\\raven-project-main\\filters-2.0.235.jar
+file.reference.junit-4.12.jar=E:\\Lib_DA1\\lib\\lib\\junit-4.12.jar
+file.reference.log4j-1.2.17.jar=E:\\Lib_DA1\\lib\\lib\\log4j-1.2.17.jar
 file.reference.lombok.jar=E:\\SU24_Xuong_Desktop_Nhom2-main\\SU24_Xuong_Desktop_Nhom2-main\\lib\\lombok.jar
 file.reference.miglayout-4.0.jar=miglayout-4.0.jar
 file.reference.mssql-jdbc-7.2.2.jre8.jar=E:\\SU24_Xuong_Desktop_Nhom2-main\\SU24_Xuong_Desktop_Nhom2-main\\lib\\mssql-jdbc-7.2.2.jre8.jar
+file.reference.poi-3.17.jar=E:\\Lib_DA1\\lib\\lib\\poi-3.17.jar
+file.reference.poi-examples-3.17.jar=E:\\Lib_DA1\\lib\\lib\\poi-examples-3.17.jar
+file.reference.poi-excelant-3.17.jar=E:\\Lib_DA1\\lib\\lib\\poi-excelant-3.17.jar
+file.reference.poi-ooxml-3.17.jar=E:\\Lib_DA1\\lib\\lib\\poi-ooxml-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar=E:\\Lib_DA1\\lib\\lib\\poi-ooxml-schemas-3.17.jar
+file.reference.poi-scratchpad-3.17.jar=E:\\Lib_DA1\\lib\\lib\\poi-scratchpad-3.17.jar
 file.reference.swing-worker-1.1.jar=E:\\raven-project-main\\raven-project-main\\swing-worker-1.1.jar
 file.reference.swingx-1.6.1.jar=E:\\raven-project-main\\raven-project-main\\swingx-1.6.1.jar
 file.reference.TimingFramework-0.55.jar=TimingFramework-0.55.jar
+file.reference.xmlbeans-2.6.0.jar=E:\\Lib_DA1\\lib\\lib\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -49,7 +62,20 @@ javac.classpath=\
     ${file.reference.filters-2.0.235.jar}:\
     ${file.reference.swingx-1.6.1.jar}:\
     ${file.reference.mssql-jdbc-7.2.2.jre8.jar}:\
-    ${file.reference.lombok.jar}
+    ${file.reference.lombok.jar}:\
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.commons-logging-1.2.jar}:\
+    ${file.reference.curvesapi-1.04.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.poi-examples-3.17.jar}:\
+    ${file.reference.poi-excelant-3.17.jar}:\
+    ${file.reference.poi-ooxml-3.17.jar}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar}:\
+    ${file.reference.poi-scratchpad-3.17.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
